--- a/Day02/01_조건문/04_nested.html
+++ b/Day02/01_조건문/04_nested.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>중첩 조건문</title>
     <script>
-        // Date : 날짜/시간 관련 객체
-        // new  : 객체를 생성하는 키워드
+        // Date     : 날짜/시간 관련 객체
+        // new      : 객체를 생성하는 키워드
         const date = new Date()
-        // getHours() : 지정 시간을 가져오는 메서드
+        // getHours()  : 지정 시간을 가져오는 메서드
         const hour = date.getHours()
 
         if( hour < 12 ) {
-            alert('아침을 먹을 시간입니다.')
+            alert('아침을 먹을 시간입니다')
         } else {
             if( hour < 15 ) {
                 alert('점심을 먹을 시간입니다.')
@@ -22,9 +22,9 @@
             }
         }
 
-        // 중첩 if문보다 단일 if 문을 사용하는 것이 권장된다.
+        // 중첩 if문보다 단일 if 문을 사용하느 것이 권장된다.
         if( hour < 12 ) {
-            alert('아침을 먹을 시간입니다.')
+            alert('아침을 먹을 시간입니다')
         } else if( hour < 15 ) {
             alert('점심을 먹을 시간입니다.')
         } else {
